@startuml

interface MoneyExpression
{
    Reduce(Bank bank, string to) : Money
    Plus(MoneyExpression addend) : MoneyExpression
} 
MoneyExpression ..> Bank

class Money <<ValueObject>>
{
    -Amount : int
    +Currency : string
    
    #Money(int amount, string currency)
    
    Times(int amount) : MoneyExpression
    
    {static} Dollar(int amount) : Money
    {static} Franc(int amount) : Money
}
Money --|> MoneyExpression
Money --> SumExpression

class SumExpression
{
    +Augend : MoneyExpression
    +Addend : MoneyExpression
}
SumExpression --|> MoneyExpression

class CurrencyPair <<ValueObject>>
{
    +fromCurrency : string
    +toCurrency : string
}

class Bank
{
    -rates : Dictionary<CurrencyPair, int>

    Reduce(MoneyExpression source, string to) : Money
    AddRate(string from, string to, int rate)
    Rate(string from, string to): int
}
Bank --> CurrencyPair
Bank ..> MoneyExpression
Bank --> Money
@enduml